Added additional HTML

--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+    <main>
+        <aside>
+
+        </aside>
+        <section>
+            <h1>My lovely HTML5 page</h1>
+            <p>Right now my webpage is a wee little thing, but one day it will grow up to be a mighty website</p>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
