Added navigation to the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     <header>
         <nav>
-
+            <ul>
+                <li>Link One</li>
+                <li>Link Two</li>
+                <li>Link Three</li>
+                <li>Link Four</li>
+            </ul>
         </nav>
     </header>
     <main>
