--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </aside>
         <section>
             <h1>My lovely HTML5 page</h1>
-            <p>Right now my webpage is a wee little thing, but one day it will grow up to be a mighty website</p>
+            <p><small>Right now my webpage is a wee little thing, but one day it will grow up to be a mighty website</small></p>
         </section>
     </main>
     <footer></footer>
