--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <li>Link Four</li>
             </ul>
         </nav>
+        <figure>
+            <img width="100%" src="my-image.jpg" />
+        </figure>
     </header>
     <main>
         <aside>
@@ -24,6 +27,7 @@
         <section>
             <h1>My lovely HTML5 page</h1>
             <p><small>Right now my webpage is a wee little thing, but one day it will grow up to be a mighty website</small></p>
+            
         </section>
     </main>
     <footer></footer>
