Adding my new pages and google font change to git repo

--- a/about.html
+++ b/about.html
@@ -17,19 +17,15 @@
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
         </nav>
-        <figure>
-            <img id="first-image" src="/assets/images/my-image.jpg" />
-        </figure>
+        <h1>About</h1>
     </header>
     <main>
-        <aside>
-
-        </aside>
-        <section>
-            <h1>My lovely HTML5 page</h1>
-            <p><small>Right now my webpage is a wee little thing, but one day it will grow up to be a mighty website</small></p>
-            
-        </section>
+        <blockquote>The only issue with being short, is other people's interpretation of the limitations.</blockquote>
+        <p>Greetings! I am a 5 foot tall hispanic woman. Since a young age I have always had a passion for computers and technology.
+            Unfortunately when growing up, females weren't as encouraged to enter the field. Post 2001 technology bubble many people were under
+            the false impression technology and computer jobs are unstable. There was a lot of fear that the field had a short life span and would
+            burn out much like the fireworks on the Fourth of July.
+        </p>
     </main>
     <footer></footer>
 </body>
