--- a/link-one.html
+++ b/link-one.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/portfolio.html">Portfolio</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li>Link One</li>
+                <li>Link Two</li>
+                <li>Link Three</li>
+                <li>Link Four</li>
             </ul>
         </nav>
         <figure>
-            <img id="first-image" src="/assets/images/my-image.jpg" />
+            <img width="100%" src="my-image.jpg" />
         </figure>
     </header>
     <main>
