--- a/portfolio.html
+++ b/portfolio.html
@@ -17,20 +17,9 @@
                 <li><a href="/contact.html">Contact</a></li>
             </ul>
         </nav>
-        <figure>
-            <img id="first-image" src="/assets/images/my-image.jpg" />
-        </figure>
+        <h1>Portfolio</h1>
     </header>
-    <main>
-        <aside>
 
-        </aside>
-        <section>
-            <h1>My lovely HTML5 page</h1>
-            <p><small>Right now my webpage is a wee little thing, but one day it will grow up to be a mighty website</small></p>
-            
-        </section>
-    </main>
     <footer></footer>
 </body>
 </html>
