Added content to every single page

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,14 @@
         </nav>
         <h1>Contact</h1>
     </header>
-
+    <main>
+        <h2>Stephanie Barnett</h2>
+        <address>Home Address <br/>
+            3743 Blue Bonnet Drive <br/>
+            Lexington, KY 40514
+        </address>
+        <a href="tel:+18594027760">Telephone Number: 859-402-7760</a>
+    </main>
     <footer></footer>
 </body>
 </html>
