--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,14 @@
         </nav>
         <h1>Portfolio</h1>
     </header>
-
+    <main>
+        <ul>
+            <li>Budget Buddy</li>
+            <li>Steven's Life</li>
+            <li>Trope Tales</li>
+            <li>Gamer's Grimoire</li>
+        </ul>
+    </main>
     <footer></footer>
 </body>
 </html>
