Commiting the git information

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
@@ -20,7 +20,7 @@
         </nav>
         <h1>About</h1>
     </header>
-    <main>
+    <main class=".main">
         <blockquote>The only issue with being short, is other people's interpretation of the limitations.</blockquote>
         <p>Greetings! I am a 5 foot tall hispanic woman. Since a young age I have always had a passion for computers and technology.
             Unfortunately when growing up, females weren't as encouraged to enter the field. Post 2001 technology bubble many people were under
@@ -28,6 +28,6 @@
             burn out much like the fireworks on the Fourth of July.
         </p>
     </main>
-    <footer></footer>
+    <footer class=".footer"></footer>
 </body>
 </html>
