--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
@@ -20,14 +20,14 @@
         </nav>
         <h1>Contact</h1>
     </header>
-    <main>
+    <main class=".main">
         <h2>Stephanie Barnett</h2>
-        <address>Home Address <br/>
+        <address id="address">Home Address <br/>
             3743 Blue Bonnet Drive <br/>
             Lexington, KY 40514
         </address>
         <a href="tel:+18594027760">Telephone Number: 859-402-7760</a>
     </main>
-    <footer></footer>
+    <footer class=".footer"></footer>
 </body>
 </html>
