--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li class="white"><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/portfolio.html">Portfolio</a></li>
                 <li><a href="/contact.html">Contact</a></li>
@@ -22,16 +22,16 @@
             <img id="first-image" src="/assets/images/my-image.jpg" />
         </figure>
     </header>
-    <main>
+    <main class=".main">
         <aside>
 
         </aside>
-        <section>
-            <h1>My lovely HTML5 page</h1>
+        <section class="section">
+            <h1 class="white">My lovely HTML5 page</h1>
             <p><small>Right now my webpage is a wee little thing, but one day it will grow up to be a mighty website</small></p>
             
         </section>
     </main>
-    <footer></footer>
+    <footer class=".footer"></footer>
 </body>
 </html>
