--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav">
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about.html">About</a></li>
@@ -20,14 +20,15 @@
         </nav>
         <h1>Portfolio</h1>
     </header>
-    <main>
-        <ul>
-            <li>Budget Buddy</li>
-            <li>Steven's Life</li>
-            <li>Trope Tales</li>
-            <li>Gamer's Grimoire</li>
+    <main class=".main">
+        <ul class="center">
+            <li class="green portfolio-item">Budget Buddy</li>
+            <li class="blue portfolio-item">Steven's Life</li>
+            <li class="purple portfolio-item">Trope Tales</li>
+            <li class="portfolio-item">Gamer's Grimoire</li>
+            <p class="p-default big">Testing out classes</p>
         </ul>
     </main>
-    <footer></footer>
+    <footer class=".footer"></footer>
 </body>
 </html>
